--- a/SIM.Presentation/Pages/_ViewStart.cshtml
+++ b/SIM.Presentation/Pages/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
-    Layout = "_Layout";
+    var isAuthenticated = true;
+    if (isAuthenticated)
+    {
+        Layout = "_LayoutAuth";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
 }
