Set up sidebar with rout

--- a/SIM.Presentation/Pages/Index.cshtml
+++ b/SIM.Presentation/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = ViewData["ActivePage"] = "Dashboard";
 }
 
 <div>
