--- a/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
+++ b/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
@@ -6,9 +6,36 @@
     <title>@ViewData["Title"] - Smart Transaction Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_box,dashboard" />
 </head>
 <body>
-    @RenderBody()
+    <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
+        <div class="h-full px-3 py-4 overflow-y-auto bg-gray-800">
+            <ul class="space-y-2 font-medium">
+                <li>
+                    <a asp-page="/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Dashboard" ? "bg-gray-700" : "")">
+                        <span class="material-symbols-outlined">
+                            dashboard
+                        </span>
+                        <span class="ms-3">Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-page="/Account/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Account" ? "bg-gray-700" : "")" ">
+                        <span class="material-symbols-outlined">
+                            account_box
+                        </span>
+                        <span class="ms-3">Account</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </aside>
+
+    <div class="p-4 bg-gray-900 text-white min-h-screen sm:ml-64">
+        @RenderBody()
+    </div>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
