--- a/SIM.Presentation/Pages/Account/Login.cshtml
+++ b/SIM.Presentation/Pages/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="flex items-center justify-center min-h-screen bg-gray-900 text-white">
+<div class="flex items-center justify-center min-h-[50vh] bg-gray-900 text-white">
     <div class="w-full max-w-md p-8 bg-gray-800 rounded-lg shadow">
         <h2 class="text-2xl font-semibold mb-6">Sign in to your account</h2>
 
