feat: login register logout logic

--- a/SIM.Presentation/Pages/Account/Login.cshtml
+++ b/SIM.Presentation/Pages/Account/Login.cshtml
@@ -22,10 +22,7 @@
             </div>
 
             <div class="flex items-center justify-between mb-4">
-                <div class="flex items-center">
-                    <input asp-for="Input.RememberMe" class="mr-2 leading-tight" />
-                    <label asp-for="Input.RememberMe" class="text-sm text-gray-300">Remember me</label>
-                </div>
+                <div></div>
                 <a asp-page="./Register" class="text-sm text-indigo-400 hover:underline">Register</a>
             </div>
 
