--- a/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
+++ b/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Smart Transaction Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_box,dashboard" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_box,category,dashboard,inventory_2,store" />
 </head>
 <body>
     <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
@@ -21,7 +21,31 @@
                     </a>
                 </li>
                 <li>
-                    <a asp-page="/Account/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Account" ? "bg-gray-700" : "")" ">
+                    <a asp-page="/TransactionCategory/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Transaction Category" ? "bg-gray-700" : "")">
+                        <span class="material-symbols-outlined">
+                            category
+                        </span>
+                        <span class="ms-3">Transaction Category</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-page="/Product/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Product" ? "bg-gray-700" : "")">
+                        <span class="material-symbols-outlined">
+                            inventory_2
+                        </span>
+                        <span class="ms-3">Product</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-page="/Vendor/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Vendor" ? "bg-gray-700" : "")">
+                        <span class="material-symbols-outlined">
+                            store
+                        </span>
+                        <span class="ms-3">Vendor</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-page="/Account/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Account" ? "bg-gray-700" : "")">
                         <span class="material-symbols-outlined">
                             account_box
                         </span>
