feat: Create/Update/Delete Vendor, Product, Category

--- a/SIM.Presentation/Pages/Shared/_DataTable.cshtml
+++ b/SIM.Presentation/Pages/Shared/_DataTable.cshtml
@@ -1,25 +1,53 @@
 ﻿@model SIM.Core.DTOs.Common.DataTableViewModel
-
-<div class="relative overflow-x-auto shadow-md rounded-lg">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-400">
-        <thead class="text-xs uppercase bg-gray-700 text-gray-400">
-            <tr>
-                @foreach (var header in Model.Headers)
-                {
-                    <th scope="col" class="px-6 py-3">@header</th>
-                }
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var row in Model.Rows)
-            {
-                <tr class="border-b bg-gray-800 border-gray-700">
-                    @foreach (var cell in row.Cells)
+@if (Model.Rows.Count > 0)
+{
+    <div class="relative overflow-x-auto shadow-md rounded-lg">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-400">
+            <thead class="text-xs uppercase bg-gray-700 text-gray-400">
+                <tr>
+                    @foreach (var header in Model.Headers)
                     {
-                        <td class="px-6 py-4 @cell.CssClass">@cell.Value</td>
+                        <th scope="col" class="px-6 py-3">@header</th>
+                    }
+                    @if (Model.ShowActions)
+                    {
+                        <th scope="col" class="px-6 py-3">Actions</th>
                     }
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                @foreach (var row in Model.Rows)
+                {
+                    <tr class="border-b bg-gray-800 border-gray-700">
+                        @foreach (var cell in row.Cells)
+                        {
+                            <td class="px-6 py-4 @cell.CssClass">@cell.Value</td>
+                        }
+                        @if (Model.ShowActions)
+                        {
+                            <td class="px-6 py-4">
+                                <div class="flex space-x-2">
+                                    @foreach (var action in row.Actions)
+                                    {
+                                        <a href="@action.Url">
+                                            @if (!string.IsNullOrEmpty(action.Icon))
+                                            {
+                                                <span class="material-symbols-outlined font-medium text-lg @action.CssClass">
+                                                    @action.Icon
+                                                </span>
+                                            }
+                                            @action.Text
+                                        </a>
+                                    }
+                                </div>
+                            </td>
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+} else
+{
+    <p class="text-gray-400 text-center">No data found !!!</p>    
+}
