--- a/SIM.Presentation/Pages/Account/Index.cshtml
+++ b/SIM.Presentation/Pages/Account/Index.cshtml
@@ -7,19 +7,48 @@
 <div class="p-4 border border-gray-700 shadow-sm rounded-lg">
     <h1 class="mb-4 text-lg font-bold">Acount Info</h1>
 
-<form method="post">
-    <div class="grid gap-6 mb-6 md:grid-cols-2">
-        <div>
-            <label asp-for="UserInfo.FirstName" class="block mb-2 text-sm font-medium text-white"></label>
-            <input type="text" asp-for="UserInfo.FirstName"
-                class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
-                placeholder="Enter your first name" />
+    <form method="post">
+        <div class="grid gap-6 mb-6 md:grid-cols-2">
+            <div>
+                <div class="flex gap-1">
+                    <label asp-for="UserInfo.FirstName" class="block mb-2 text-sm font-medium text-white"></label>
+                    <span class="text-sm text-red-400">*</span>
+                </div>
+                <input type="text" asp-for="UserInfo.FirstName" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your first name" />
+                <span asp-validation-for="UserInfo.FirstName" class="text-red-400 text-sm"></span>
+            </div>
+            <div>
+                <div class="flex gap-1">
+                    <label asp-for="UserInfo.LastName" class="block mb-2 text-sm font-medium text-white"></label>
+                    <span class="text-sm text-red-400">*</span>
+                </div>
+                <input type="text" asp-for="UserInfo.LastName" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your last name" />
+                <span asp-validation-for="UserInfo.LastName" class="text-red-400 text-sm"></span>
+            </div>
+            <div>
+                <div class="flex gap-1">
+                    <label asp-for="UserInfo.Phone" class="block mb-2 text-sm font-medium text-white"></label>
+                    <span class="text-sm text-red-400">*</span>
+                </div>
+                <input type="text" asp-for="UserInfo.Phone" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your phone" />
+                <span asp-validation-for="UserInfo.Phone" class="text-red-400 text-sm"></span>
+            </div>
+            <div>
+                <div class="flex gap-1">
+                    <label asp-for="UserInfo.Email" class="block mb-2 text-sm font-medium text-white"></label>
+                    <span class="text-sm text-red-400">*</span>
+                </div>
+                <input type="email" asp-for="UserInfo.Email" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your email" />
+                <span asp-validation-for="UserInfo.Email" class="text-red-400 text-sm"></span>
+            </div>
         </div>
-        <div>
-            <label asp-for="UserInfo.LastName" class="block mb-2 text-sm font-medium text-white"></label>
-            <input type="text" asp-for="UserInfo.LastName"
-                class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
-                placeholder="Enter your last name" />
+        <div class="mb-6">
+            <div class="flex gap-1">
+                <label asp-for="UserInfo.Address" class="block mb-2 text-sm font-medium text-white"></label>
+                <span class="text-sm text-red-400">*</span>
+            </div>
+            <input type="text" asp-for="UserInfo.Address" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your address" />
+            <span asp-validation-for="UserInfo.Address" class="text-red-400 text-sm"></span>
         </div>
         <div>
             <label asp-for="UserInfo.Phone" class="block mb-2 text-sm font-medium text-white"></label>
@@ -27,23 +56,14 @@
                 class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
                 placeholder="Enter your phone" />
         </div>
-        <div>
-            <label asp-for="UserInfo.Email" class="block mb-2 text-sm font-medium text-white"></label>
-            <input type="email" asp-for="UserInfo.Email"
-                class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
-                placeholder="Enter your email" />
-        </div>
-    </div>
-    <div class="mb-6">
-        <label asp-for="UserInfo.Address" class="block mb-2 text-sm font-medium text-white"></label>
-        <input type="text" asp-for="UserInfo.Address"
-            class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
-            placeholder="Enter your address" />
-    </div>
-    <button type="submit" asp-page-handler="Submit"
-        class="text-white font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700">Submit</button>
 
-    <button type="submit" asp-page-handler="Logout"
-        class="text-white font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center bg-red-600 hover:bg-red-700">Logout</button>
-</form>
+        <div class="flex justify-end mt-4">
+            <button type="submit" asp-page-handler="Submit"
+                    class="text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700">
+                Update
+            </button>
+        </div>
+    </form>
 </div>
+
+<partial name="_ValidationScriptsPartial" />
