fix: change name for create/update feature

--- a/SIM.Presentation/Pages/Product/Index.cshtml
+++ b/SIM.Presentation/Pages/Product/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="p-4 border border-gray-700 shadow-sm rounded-lg">
     <div class="flex justify-between">
         <h1 class="mb-4 text-lg font-bold">Products</h1>
-        <a asp-page="/Product/Save" class="border font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500">+ Create Product</a>
+        <a asp-page="/Product/Upsert" class="border font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500">+ Create Product</a>
     </div>
 
     @await Html.PartialAsync("_DataTable", new DataTableViewModel
@@ -27,7 +27,7 @@
             },
             Actions = new List<TableAction>
             {
-                new TableAction { Url = $"/Product/Save/{tc.Id}", Icon = "edit_square", CssClass = "text-blue-700 hover:text-blue-600" },
+                new TableAction { Url = $"/Product/Upsert/{tc.Id}", Icon = "edit_square", CssClass = "text-blue-700 hover:text-blue-600" },
                 new TableAction { Url = $"/Product/Delete/{tc.Id}", Icon = "delete", CssClass = "text-red-700 hover:text-red-600" }
             }
         }).ToList()
