--- a/SIM.Presentation/Pages/Product/Upsert.cshtml
+++ b/SIM.Presentation/Pages/Product/Upsert.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id?}"
-@model SIM.Presentation.Pages.Product.SaveModel
+@model SIM.Presentation.Pages.Product.UpsertModel
 @{
     ViewData["ActivePage"] = "Product";
     ViewData["Title"] = Model.Id.HasValue ? "Update Product" : "Create Product";
