--- a/SIM.Presentation/Pages/TransactionCategory/Upsert.cshtml
+++ b/SIM.Presentation/Pages/TransactionCategory/Upsert.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id?}"
-@model SIM.Presentation.Pages.TransactionCategory.SaveModel
+@model SIM.Presentation.Pages.TransactionCategory.UpsertModel
 @{
     ViewData["ActivePage"] = "Transaction Category";
     ViewData["Title"] = Model.Id.HasValue ? "Update Category" : "Create Category";
