--- a/SIM.Presentation/Pages/Login.cshtml
+++ b/SIM.Presentation/Pages/Login.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SIM.Presentation.Pages.Account.LoginModel
+@model SIM.Presentation.Pages.LoginModel
 @{
     ViewData["Title"] = "Login";
     var hasGlobalErrors = ViewData.ModelState.ContainsKey(string.Empty) &&
