--- a/SIM.Presentation/Pages/Register.cshtml
+++ b/SIM.Presentation/Pages/Register.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SIM.Presentation.Pages.Account.RegisterModel
+@model SIM.Presentation.Pages.RegisterModel
 @{
     ViewData["Title"] = "Register";
     var hasGlobalErrors = ViewData.ModelState.ContainsKey(string.Empty) &&
