--- a/SIM.Presentation/Pages/_ViewStart.cshtml
+++ b/SIM.Presentation/Pages/_ViewStart.cshtml
@@ -1,5 +1,3 @@
 ﻿@{
-    // Choose layout based on the current user identity. Use the PageModel's User property
-    var isAuthenticated = (User?.Identity?.IsAuthenticated ?? false);
-    Layout = isAuthenticated ? "_LayoutAuth" : "_Layout";
+    Layout = User.Identity!.IsAuthenticated ? "_LayoutAuth" : "_Layout";
 }
