--- a/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
+++ b/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Smart Transaction Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_box,cancel,category,check_circle,dashboard,delete,edit_square,inventory_2,store" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_balance_wallet,account_box,cancel,category,check_circle,dashboard,delete,edit_square,inventory_2,store" />
 </head>
 <body>
     <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
@@ -42,6 +42,14 @@
                             store
                         </span>
                         <span class="ms-3">Vendor</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-page="/Budget/Index" class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Budget" ? "bg-gray-700" : "")">
+                        <span class="material-symbols-outlined">
+                            account_balance_wallet
+                        </span>
+                        <span class="ms-3">Budget</span>
                     </a>
                 </li>
                 <li>
