--- a/SIM.Presentation/Pages/Account/Index.cshtml
+++ b/SIM.Presentation/Pages/Account/Index.cshtml
@@ -14,7 +14,9 @@
                     <label asp-for="UserInfo.FirstName" class="block mb-2 text-sm font-medium text-white"></label>
                     <span class="text-sm text-red-400">*</span>
                 </div>
-                <input type="text" asp-for="UserInfo.FirstName" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your first name" />
+                <input type="text" asp-for="UserInfo.FirstName"
+                    class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
+                    placeholder="Enter your first name" />
                 <span asp-validation-for="UserInfo.FirstName" class="text-red-400 text-sm"></span>
             </div>
             <div>
@@ -22,7 +24,9 @@
                     <label asp-for="UserInfo.LastName" class="block mb-2 text-sm font-medium text-white"></label>
                     <span class="text-sm text-red-400">*</span>
                 </div>
-                <input type="text" asp-for="UserInfo.LastName" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your last name" />
+                <input type="text" asp-for="UserInfo.LastName"
+                    class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
+                    placeholder="Enter your last name" />
                 <span asp-validation-for="UserInfo.LastName" class="text-red-400 text-sm"></span>
             </div>
             <div>
@@ -30,7 +34,9 @@
                     <label asp-for="UserInfo.Phone" class="block mb-2 text-sm font-medium text-white"></label>
                     <span class="text-sm text-red-400">*</span>
                 </div>
-                <input type="text" asp-for="UserInfo.Phone" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your phone" />
+                <input type="text" asp-for="UserInfo.Phone"
+                    class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
+                    placeholder="Enter your phone" />
                 <span asp-validation-for="UserInfo.Phone" class="text-red-400 text-sm"></span>
             </div>
             <div>
@@ -38,7 +44,9 @@
                     <label asp-for="UserInfo.Email" class="block mb-2 text-sm font-medium text-white"></label>
                     <span class="text-sm text-red-400">*</span>
                 </div>
-                <input type="email" asp-for="UserInfo.Email" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your email" />
+                <input type="email" asp-for="UserInfo.Email"
+                    class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
+                    placeholder="Enter your email" />
                 <span asp-validation-for="UserInfo.Email" class="text-red-400 text-sm"></span>
             </div>
         </div>
@@ -47,7 +55,9 @@
                 <label asp-for="UserInfo.Address" class="block mb-2 text-sm font-medium text-white"></label>
                 <span class="text-sm text-red-400">*</span>
             </div>
-            <input type="text" asp-for="UserInfo.Address" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500" placeholder="Enter your address" />
+            <input type="text" asp-for="UserInfo.Address"
+                class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:border-blue-500"
+                placeholder="Enter your address" />
             <span asp-validation-for="UserInfo.Address" class="text-red-400 text-sm"></span>
         </div>
         <div>
@@ -59,9 +69,11 @@
 
         <div class="flex justify-end mt-4">
             <button type="submit" asp-page-handler="Submit"
-                    class="text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700">
+                class="text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700">
                 Update
             </button>
+            <button type="submit" asp-page-handler="Logout"
+                class="text-white font-medium rounded-lg text-sm w-full sm:w-auto px-5 mx-2 py-2.5 text-center bg-red-600 hover:bg-red-700">Logout</button>
         </div>
     </form>
 </div>
